# ImgEditor

./: Makefile  README.md  pyproject.toml
resource/widget/: ClosuresWidget.ui  ErosionWidget.ui  ExpansionWidget.ui  GrayscaleToMono.ui  MediaFilterWidget.ui  MonoToGrayscaleWidget.ui  RgbToGrayscale.ui  UnlockWidget.ui
resource/window/: MainWindow.ui  MainWindow_backup.ui  SetupMaskDialog.ui  showMatrixDialog.ui
src/: main.py
src/ui/: __init__.py  chart_dialog.py  closing_widget.py  erosion_widget.py  expansion_widget.py  grayscale_to_mono_widget.py  image_editor_window.py  mask_dialog.py  matrix_dialog.py  median_filter_widget.py  mono_to_graysacel_widget.py  rgb_to_grayscale_widget.py  rgb_to_hsl_widget.py  unlock_widget.py
src/utils/: __init__.py  exceptions.py  image_helper.py  pixels_helper.py  sum_of_surrounding_pixels.py
src/widgets/: __init__.py  closing.py  erosion.py  expansion.py  grayscale_to_mono.py  median_filter.py  mono_to_grayscale.py  rgb_to_grayscale.py  rgb_to_hsl.py  unlock.py
src/window/: chart_dialog.py  img_editor_window.py  matrix_dialog.py  setup_mask_dialog.py  show_chart_dialog.py  show_matrix_dialog.py
