[project]
name = "imgeditorqt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyside6>=6.9.0"]

[dependency-groups]
dev = ["ruff>=0.11.6"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "ui",
]


[tool.ruff.lint]
select = [
  "ASYNC",
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "B",
  "Q",
  "C4",
  "EM",
  "FA",
  "SLF",
  "PIE",
  "RET",
  "SIM",
  "SLOT",
  "TC",
  "PTH",
  "FLY",
  "N",
  "PERF",
  "F",
  "PL",
  "PLE",
  "PLR",
  "PLW",
  "UP",
  "RUF",
]

extend-ignore = ["PLR2004", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"src/ui/*" = ["N806", "RUF100"]
